kustomizations/data/gremlinserver-neo4j/overlays/gke/gremlinserver-persist-neo4j-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gremlinserver-neo4j
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: gremlinserver-neo4j
        volumeMounts:
        - mountPath: /opt/gremlin-server/data/neo4j
          name: neo4j-data-volume
      volumes:
      - name: neo4j-data-volume
        gcePersistentDisk:
          pdName: "gremlinserver-neo4j-data"
      nodeSelector:
        zone: europe-west1-c
