kustomizations/data/gremlinserver-neo4j/overlays/gke/tune-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gremlinserver-neo4j-bolt
spec:
  routes:
  - kind: Rule
    match: Host(`grapher.itinerix-project.net`)
    services:
    - name: gremlinserver-neo4j
      port: 7687
    middlewares: []
